# smart-search

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.py  deploy.sh  final_test.py  main.py  pyproject.toml  run.py  test_fix.py  test_openrouter_integration.py  test_search.py
.streamlit/: config.toml
agents/: agent_team.py  api_failover.py  dspy_optimization.py  enhanced_search_agent.py  enhanced_verification.py  jira_integration.py  personalization.py  search_agent.py  serper_client.py  serper_enhanced_search.py  verification.py
api/: app.py  main.py
api/components/: result_display.py  search_interface.py  user_profile.py
cli/: README.md  __init__.py  __main__.py  smart_search.py
optimization/: dspy_optimizer.py
reflex_app/: README.md  __init__.py  app.py  rxconfig.py
tests/: test_agents.py  test_cli.py  test_search.py
utils/: formatters.py
